; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/et131x/extr_et1310_phy.c_ET1310_PhyInit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/et131x/extr_et1310_phy.c_ET1310_PhyInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.et131x_adapter = type { i32 }

@PHY_ID_1 = common dso_local global i32 0, align 4
@PHY_ID_2 = common dso_local global i32 0, align 4
@PHY_MPHY_CONTROL_REG = common dso_local global i32 0, align 4
@PHY_INDEX_REG = common dso_local global i32 0, align 4
@PHY_DATA_REG = common dso_local global i32 0, align 4
@PHY_CONTROL = common dso_local global i32 0, align 4
@ConfigPhy = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ET1310_PhyInit(%struct.et131x_adapter* %0) #0 {
  %2 = alloca %struct.et131x_adapter*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.et131x_adapter* %0, %struct.et131x_adapter** %2, align 8
  %5 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %6 = icmp eq %struct.et131x_adapter* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %117

8:                                                ; preds = %1
  %9 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %10 = load i32, i32* @PHY_ID_1, align 4
  %11 = call i32 @MiRead(%struct.et131x_adapter* %9, i32 %10, i64* %3)
  %12 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %13 = load i32, i32* @PHY_ID_2, align 4
  %14 = call i32 @MiRead(%struct.et131x_adapter* %12, i32 %13, i64* %3)
  %15 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %16 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %17 = call i32 @MiRead(%struct.et131x_adapter* %15, i32 %16, i64* %3)
  %18 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %19 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %20 = call i32 @MiWrite(%struct.et131x_adapter* %18, i32 %19, i32 6)
  %21 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %22 = load i32, i32* @PHY_INDEX_REG, align 4
  %23 = call i32 @MiWrite(%struct.et131x_adapter* %21, i32 %22, i32 1026)
  %24 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %25 = load i32, i32* @PHY_DATA_REG, align 4
  %26 = call i32 @MiRead(%struct.et131x_adapter* %24, i32 %25, i64* %3)
  %27 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %28 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %29 = call i32 @MiWrite(%struct.et131x_adapter* %27, i32 %28, i32 2)
  %30 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %31 = load i32, i32* @PHY_ID_1, align 4
  %32 = call i32 @MiRead(%struct.et131x_adapter* %30, i32 %31, i64* %3)
  %33 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %34 = load i32, i32* @PHY_ID_2, align 4
  %35 = call i32 @MiRead(%struct.et131x_adapter* %33, i32 %34, i64* %3)
  %36 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %37 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %38 = call i32 @MiRead(%struct.et131x_adapter* %36, i32 %37, i64* %3)
  %39 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %40 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %41 = call i32 @MiWrite(%struct.et131x_adapter* %39, i32 %40, i32 6)
  %42 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %43 = load i32, i32* @PHY_INDEX_REG, align 4
  %44 = call i32 @MiWrite(%struct.et131x_adapter* %42, i32 %43, i32 1026)
  %45 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %46 = load i32, i32* @PHY_DATA_REG, align 4
  %47 = call i32 @MiRead(%struct.et131x_adapter* %45, i32 %46, i64* %3)
  %48 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %49 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %50 = call i32 @MiWrite(%struct.et131x_adapter* %48, i32 %49, i32 2)
  %51 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %52 = load i32, i32* @PHY_CONTROL, align 4
  %53 = call i32 @MiRead(%struct.et131x_adapter* %51, i32 %52, i64* %3)
  %54 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %55 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %56 = call i32 @MiRead(%struct.et131x_adapter* %54, i32 %55, i64* %3)
  %57 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %58 = load i32, i32* @PHY_CONTROL, align 4
  %59 = call i32 @MiWrite(%struct.et131x_adapter* %57, i32 %58, i32 6208)
  %60 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %61 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %62 = call i32 @MiWrite(%struct.et131x_adapter* %60, i32 %61, i32 7)
  store i64 0, i64* %4, align 8
  br label %63

63:                                               ; preds = %71, %8
  %64 = load i32**, i32*** @ConfigPhy, align 8
  %65 = load i64, i64* %4, align 8
  %66 = getelementptr inbounds i32*, i32** %64, i64 %65
  %67 = load i32*, i32** %66, align 8
  %68 = getelementptr inbounds i32, i32* %67, i64 0
  %69 = load i32, i32* %68, align 4
  %70 = icmp ne i32 %69, 0
  br i1 %70, label %71, label %104

71:                                               ; preds = %63
  %72 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %73 = load i32, i32* @PHY_INDEX_REG, align 4
  %74 = load i32**, i32*** @ConfigPhy, align 8
  %75 = load i64, i64* %4, align 8
  %76 = getelementptr inbounds i32*, i32** %74, i64 %75
  %77 = load i32*, i32** %76, align 8
  %78 = getelementptr inbounds i32, i32* %77, i64 0
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @MiWrite(%struct.et131x_adapter* %72, i32 %73, i32 %79)
  %81 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %82 = load i32, i32* @PHY_DATA_REG, align 4
  %83 = load i32**, i32*** @ConfigPhy, align 8
  %84 = load i64, i64* %4, align 8
  %85 = getelementptr inbounds i32*, i32** %83, i64 %84
  %86 = load i32*, i32** %85, align 8
  %87 = getelementptr inbounds i32, i32* %86, i64 1
  %88 = load i32, i32* %87, align 4
  %89 = call i32 @MiWrite(%struct.et131x_adapter* %81, i32 %82, i32 %88)
  %90 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %91 = load i32, i32* @PHY_INDEX_REG, align 4
  %92 = load i32**, i32*** @ConfigPhy, align 8
  %93 = load i64, i64* %4, align 8
  %94 = getelementptr inbounds i32*, i32** %92, i64 %93
  %95 = load i32*, i32** %94, align 8
  %96 = getelementptr inbounds i32, i32* %95, i64 0
  %97 = load i32, i32* %96, align 4
  %98 = call i32 @MiWrite(%struct.et131x_adapter* %90, i32 %91, i32 %97)
  %99 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %100 = load i32, i32* @PHY_DATA_REG, align 4
  %101 = call i32 @MiRead(%struct.et131x_adapter* %99, i32 %100, i64* %3)
  %102 = load i64, i64* %4, align 8
  %103 = add i64 %102, 1
  store i64 %103, i64* %4, align 8
  br label %63

104:                                              ; preds = %63
  %105 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %106 = load i32, i32* @PHY_CONTROL, align 4
  %107 = call i32 @MiRead(%struct.et131x_adapter* %105, i32 %106, i64* %3)
  %108 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %109 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %110 = call i32 @MiRead(%struct.et131x_adapter* %108, i32 %109, i64* %3)
  %111 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %112 = load i32, i32* @PHY_CONTROL, align 4
  %113 = call i32 @MiWrite(%struct.et131x_adapter* %111, i32 %112, i32 4160)
  %114 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %115 = load i32, i32* @PHY_MPHY_CONTROL_REG, align 4
  %116 = call i32 @MiWrite(%struct.et131x_adapter* %114, i32 %115, i32 2)
  br label %117

117:                                              ; preds = %104, %7
  ret void
}

declare dso_local i32 @MiRead(%struct.et131x_adapter*, i32, i64*) #1

declare dso_local i32 @MiWrite(%struct.et131x_adapter*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
